# dataidea

./: .gitignore  404.html  README.md  Readme.md  client_secret_15447787185-ehnpvqs3s21cgm48cd9j58b3imhk293i.apps.googleusercontent.com.json  db.sqlite3  index.html  pyproject.toml  requirements.txt  search.json  settings.ini  sitemap.xml
Python/: 00_outline.html  01_basics.html  02_variables.html  03_numbers.html  04_operators.html  05_containers.html  06_flow_control.html  07_advanced.html  08_modules.html  09_file_handling.html  10_exercise.html  11_python_objective_quiz.html  12_true_or_false_quiz.html  miscellaneous_exerise.html
Python-Data-Analysis/: outline.html
Python-Data-Analysis/Week1-Intro/: 11_python_tutorial.html  12_numpy.html  pandas.html
Python-Data-Analysis/Week2-Cleaning-Intro/: 21_weather_data.html  pandas-puzzles.html
Python-Data-Analysis/Week3-Visualization/: 31_matplotlib_refined.html  32_data_exploration_and_cleaning_exercise.html  nobel_prize_laureates_exercise.html  visualization_quiz.html
Pytorch/: pytorch_outline.html
Pytorch/Vision/: fgsm_tutorial.html  (+6 more)
accounts/: forms.py  urls.py  views.py
blog/: models.py  urls.py  views.py
dataidea/: _modidx.py  quickstart.html  settings.py  urls.py
index/: admin.py  forms.py  models.py  urls.py  views.py
nbs/: 404.ipynb  _quarto.yml  index.ipynb  nbdev.yml  sidebar.yml  styles.css
programming_for_data_science_site/: _modidx.py
school/: admin.py  apps.py  forms.py  models.py  signals.py  urls.py  views.py
tools/: admin.py  devotion_views.py  forms.py  models.py  urls.py  views.py
(+186 files in other folders)
