[tool.poetry]
name = "dataidea"
version = "0.2.0"
description = "Full Fledge DataIdea"
authors = ["jumashafara <jumashafara0@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.4"
pillow = "^10.0.0"
requests = "^2.31.0"
markdown = "^3.4.4"
assemblyai = "^0.18.0"
openai = "^0.28.1"
langchain = "^0.0.309"
reportlab = "^4.0.5"
django-allauth = "^0.58.2"
django-markdown = "^0.8.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
